2008-12-15  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymail-camel/tny-camel-account-store.c: removed unnecesary camel
	exception checks.

	* libtinymail-camel/tny-session-camel.c: added missing unref in
	set_device.

2008-12-08  Suhang Wan  <shuang.wan@intel.com>

	* Fixed compilation errors in unit tests

2008-11-27  Sergio Villar Senin  <svillar@igalia.com>

	* libtinymail-camel/tny-camel-folder.c: set priv->account to NULL in
	dispose after unref'ing it.

2008-11-27  Jose Dapena Paz  <jdapena@igalia.com>

	* libtinymailui-gtk/tny-gtk-folder-list-store.c
	Fix big typo: folder list store inherits from list store, not 
	tree store.

	* libtinymailui-gtk/tny-gtk-folder-list-store.[ch]:
	Folder list store path separator is now configurable.

	* libtinymailui-gtk/tny-gtk-folder-list-store.c:
	Fixed reference leaks

2008-11-24  Jose Dapena Paz  <jdapena@igalia.com>

	* Added new TnyGtkFolderListStore, implementing a plain model (no tree)
	for the folder store.

	* libtinymailui-gtk/tny-gtk-folder-store-tree-model.[ch]:
	Added support for settings construction flags. Also added a flag
	"show path" for the tree model, that makes it store the full path 
	name.

2008-11-21  Sergio Villar Senin  <svillar@iglaia.com>

	* libtinymail-camel/tny-camel-default-connection-policy.c: added
	missing license
	* libtinymail-gnomevfs/tny-vfs-stream.c: prevent a double free of a
	file pointer
	* libtinymail-maemo/tny-maemo-device.c: added missing initialization
	* libtinymailui-gtkhtml/tny-gtk-html-mime-part-view.c: added missing
	initialization

2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
 
	Add some documentation tny_folder_store_refresh_async()

2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
 
	Add some documentation about the behaviour of tny_folder_refresh_async()

2008-11-21  Martin Bonnin  <martinbonnin@gmail.com>
 
	* revert last changeset:
	We want this to be fixed a better way	 

2008-11-20  Martin Bonnin  <martinbonnin@gmail.com>

	* camel operation: