@@ -1,3 +1,9 @@
+2009-01-08  Jose Dapena Paz  <jdapena@igalia.com>
+
+	* libtinymail-camel/camel-lite/camel/providers/imap/camel-imap-store.c:
+	now *_stop_idle_connect_lock loops if it cannot get the connect lock
+	to avoid interlocks if two concurrent threads try to get the lock.
+
 2008-12-15  Jose Dapena Paz  <jdapena@igalia.com>
 
 	* libtinymail-camel/tny-camel-account-store.c: removed unnecesary camel
